Make some improvement for the tests, still some unit tests to do